--- a/index.html
+++ b/index.html
@@ -39,169 +39,166 @@
     <p>Durante la realización de este proyecto, los alumnos aplicaron habilidades en desarrollo web utilizando <strong>HTML5</strong> y <strong>CSS3</strong> implementando <em>diseño responsivo</em> y buenas prácticas de programación orientadas a interfaces funcionales y atractivas.</p>
  </section>
 
-    <!-- ===========================
-     SECCIÓN DE ALUMNOS
-============================ -->
+    <!--SECCIÓN DE ALUMNOS-->
 <section id="alumnos">
     <h2>Integrantes del grupo</h2>
     <div class="grid-tarjetas">
         <!-- Tarjeta 1 -->
         <div class="tarjeta">
             <img src="img/proyectos.jpg" alt="Foto de Alumno 1">
-            <h3>Alumno 1</h3>
+            <h3>José Alberto Barradas Campos</h3>
             <p>Rol o especialidad</p>
-            <a href="alumnos/alumno1.html" class="btn-tarjeta">Ver página</a>
+            <a href="alumnos/226W0065/index.html" class="btn-tarjeta">Ver página</a>
         </div>
         <!-- Tarjeta 2 -->
         <div class="tarjeta">
             <img src="img/proyectos.jpg" alt="Foto de Alumno 2">
-            <h3>Alumno 2</h3>
+            <h3>Karla Belen Bazan Rosas</h3>
             <p>Rol o especialidad</p>
-            <a href="alumnos/alumno2.html" class="btn-tarjeta">Ver página</a>
+            <a href="alumnos/246W1159/index.html" class="btn-tarjeta">Ver página</a>
         </div>
         <!-- Tarjeta 3 -->
         <div class="tarjeta">
             <img src="img/proyectos.jpg" alt="Foto de Alumno 3">
-            <h3>Alumno 3</h3>
+            <h3>Marina Iveth Cabello Peralta</h3>
             <p>Rol o especialidad</p>
-            <a href="alumnos/alumno3.html" class="btn-tarjeta">Ver página</a>
+            <a href="alumnos/226W0066/index.html" class="btn-tarjeta">Ver página</a>
         </div>
         <!-- Tarjeta 4 -->
         <div class="tarjeta">
             <img src="img/proyectos.jpg" alt="Foto de Alumno 4">
-            <h3>Alumno 4</h3>
+            <h3>Alan Olaf Carrillo Rodríguez</h3>
             <p>Rol o especialidad</p>
-            <a href="alumnos/alumno4.html" class="btn-tarjeta">Ver página</a>
+            <a href="alumnos/226W1085/index.html" class="btn-tarjeta">Ver página</a>
         </div>
         <!-- Tarjeta 5 -->
         <div class="tarjeta">
             <img src="img/proyectos.jpg" alt="Foto de Alumno 5">
-            <h3>Alumno 5</h3>
+            <h3></h3>Leonardo Cid Reyes
             <p>Rol o especialidad</p>
-            <a href="alumnos/alumno5.html" class="btn-tarjeta">Ver página</a>
+            <a href="alumnos/226W0997/index.html" class="btn-tarjeta">Ver página</a>
         </div>
         <!-- Tarjeta 6 -->
         <div class="tarjeta">
             <img src="img/proyectos.jpg" alt="Foto de Alumno 6">
-            <h3>Alumno 6</h3>
+            <h3>María del Pilar Figuiras Cruz</h3>
             <p>Rol o especialidad</p>
-            <a href="alumnos/alumno6.html" class="btn-tarjeta">Ver página</a>
+            <a href="alumnos/226W0724/index.html" class="btn-tarjeta">Ver página</a>
         </div>
         <!-- Tarjeta 7 -->
         <div class="tarjeta">
             <img src="img/proyectos.jpg" alt="Foto de Alumno 7">
-            <h3>Alumno 7</h3>
+            <h3>Jaqueline Lizet García Baltazar</h3>
             <p>Rol o especialidad</p>
-            <a href="alumnos/alumno7.html" class="btn-tarjeta">Ver página</a>
+            <a href="alumnos/226W1077/index.html" class="btn-tarjeta">Ver página</a>
         </div>
         <!-- Tarjeta 8 -->
         <div class="tarjeta">
             <img src="img/proyectos.jpg" alt="Foto de Alumno 8">
-            <h3>Alumno 8</h3>
+            <h3>Luis Gabriel García Carmona</h3>
             <p>Rol o especialidad</p>
-            <a href="alumnos/alumno8.html" class="btn-tarjeta">Ver página</a>
+            <a href="alumnos/226W1013/index.html" class="btn-tarjeta">Ver página</a>
         </div>
         <!-- Tarjeta 9 -->
         <div class="tarjeta">
             <img src="img/proyectos.jpg" alt="Foto de Alumno 9">
-            <h3>Alumno 9</h3>
+            <h3>Marvin Anselmo Gines Jacome</h3>
             <p>Rol o especialidad</p>
-            <a href="alumnos/alumno9.html" class="btn-tarjeta">Ver página</a>
+            <a href="alumnos/226W0086/index.html" class="btn-tarjeta">Ver página</a>
         </div>
         <!-- Tarjeta 10 -->
         <div class="tarjeta">
             <img src="img/proyectos.jpg" alt="Foto de Alumno 10">
-            <h3>Alumno 10</h3>
+            <h3>Bryan Adrian Leyva Serafín</h3>
             <p>Rol o especialidad</p>
-            <a href="alumnos/alumno10.html" class="btn-tarjeta">Ver página</a>
+            <a href="alumnos/226W0996/index.html" class="btn-tarjeta">Ver página</a>
         </div>
         <!-- Tarjeta 11 -->
         <div class="tarjeta">
             <img src="img/proyectos.jpg" alt="Foto de Alumno 11">
-            <h3>Alumno 11</h3>
+            <h3>Emanuel Mendoza Hernández</h3>
             <p>Rol o especialidad</p>
-            <a href="alumnos/alumno11.html" class="btn-tarjeta">Ver página</a>
+            <a href="alumnos/226W1022/index.html" class="btn-tarjeta">Ver página</a>
         </div>
         <!-- Tarjeta 12 -->
         <div class="tarjeta">
             <img src="img/proyectos.jpg" alt="Foto de Alumno 12">
-            <h3>Alumno 12</h3>
+            <h3>Esdras Horeb Merino Figueiras</h3>
             <p>Rol o especialidad</p>
-            <a href="alumnos/alumno12.html" class="btn-tarjeta">Ver página</a>
+            <a href="alumnos/226W0084/index.html" class="btn-tarjeta">Ver página</a>
         </div>
         <!-- Tarjeta 13 -->
         <div class="tarjeta">
             <img src="img/proyectos.jpg" alt="Foto de Alumno 13">
-            <h3>Alumno 13</h3>
+            <h3>Jesica Nieto Marcelino</h3>
             <p>Rol o especialidad</p>
-            <a href="alumnos/alumno13.html" class="btn-tarjeta">Ver página</a>
+            <a href="alumnos/226W0928/index.html" class="btn-tarjeta">Ver página</a>
         </div>
         <!-- Tarjeta 14 -->
         <div class="tarjeta">
             <img src="img/proyectos.jpg" alt="Foto de Alumno 14">
-            <h3>Alumno 14</h3>
+            <h3>Fredy Gael Quiahua Juárez</h3>
             <p>Rol o especialidad</p>
-            <a href="alumnos/alumno14.html" class="btn-tarjeta">Ver página</a>
+            <a href="alumnos/226W0749/index.html" class="btn-tarjeta">Ver página</a>
         </div>
         <!-- Tarjeta 15 -->
         <div class="tarjeta">
             <img src="img/proyectos.jpg" alt="Foto de Alumno 15">
-            <h3>Alumno 15</h3>
+            <h3>Fernándo Sánchez Quintero</h3>
             <p>Rol o especialidad</p>
-            <a href="alumnos/alumno15.html" class="btn-tarjeta">Ver página</a>
+            <a href="alumnos/226W1021/index.html" class="btn-tarjeta">Ver página</a>
         </div>
         <!-- Tarjeta 16 -->
         <div class="tarjeta">
             <img src="img/proyectos.jpg" alt="Foto de Alumno 16">
-            <h3>Alumno 16</h3>
+            <h3>Jesus Alejandro Ramírez Rendón</h3>
             <p>Rol o especialidad</p>
-            <a href="alumnos/alumno16.html" class="btn-tarjeta">Ver página</a>
+            <a href="alumnos/226W1049/index.html" class="btn-tarjeta">Ver página</a>
         </div>
         <!-- Tarjeta 17 -->
         <div class="tarjeta">
             <img src="img/proyectos.jpg" alt="Foto de Alumno 17">
-            <h3>Alumno 17</h3>
+            <h3>Damian Rosales Romero</h3>
             <p>Rol o especialidad</p>
-            <a href="alumnos/alumno17.html" class="btn-tarjeta">Ver página</a>
+            <a href="alumnos/226W0881/index.html" class="btn-tarjeta">Ver página</a>
         </div>
         <!-- Tarjeta 18 -->
         <div class="tarjeta">
             <img src="img/proyectos.jpg" alt="Foto de Alumno 18">
-            <h3>Alumno 18</h3>
+            <h3>María Belén Teodoro López</h3>
             <p>Rol o especialidad</p>
-            <a href="alumnos/alumno18.html" class="btn-tarjeta">Ver página</a>
+            <a href="alumnos/226W0068/index.html" class="btn-tarjeta">Ver página</a>
         </div>
         <!-- Tarjeta 19 -->
         <div class="tarjeta">
             <img src="img/proyectos.jpg" alt="Foto de Alumno 19">
-            <h3>Alumno 19</h3>
+            <h3>Eliseo Terán Oaxaca</h3>
             <p>Rol o especialidad</p>
-            <a href="alumnos/alumno19.html" class="btn-tarjeta">Ver página</a>
+            <a href="alumnos/226W0883/index.html" class="btn-tarjeta">Ver página</a>
         </div>
         <!-- Tarjeta 20 -->
         <div class="tarjeta">
             <img src="img/proyectos.jpg" alt="Foto de Alumno 20">
-            <h3>Alumno 20</h3>
+            <h3>Amando Trujillo Mendoza</h3>
             <p>Rol o especialidad</p>
-            <a href="alumnos/alumno20.html" class="btn-tarjeta">Ver página</a>
+            <a href="alumnos/226W0899/index.html" class="btn-tarjeta">Ver página</a>
         </div>
         <!-- Tarjeta 21 -->
         <div class="tarjeta">
             <img src="img/proyectos.jpg" alt="Foto de Alumno 21">
-            <h3>Alumno 21</h3>
+            <h3>Gisela Jessica Vazquez Olivares</h3>
             <p>Rol o especialidad</p>
-            <a href="alumnos/alumno21.html" class="btn-tarjeta">Ver página</a>
+            <a href="alumnos/226W1103/index.html" class="btn-tarjeta">Ver página</a>
         </div>
         <!-- Tarjeta 22 -->
         <div class="tarjeta">
             <img src="img/proyectos.jpg" alt="Foto de Alumno 22">
-            <h3>Alumno 22</h3>
+            <h3>Dolores Dariana Vite Ramírez</h3>
             <p>Rol o especialidad</p>
-            <a href="alumnos/alumno22.html" class="btn-tarjeta">Ver página</a>
+            <a href="alumnos/226W0064/index.html" class="btn-tarjeta">Ver página</a>
         </div>
     </div>
 </section>
-
 
     <!-- ===========================
          SECCIÓN DE DOCENTE
